--- a/package.json
+++ b/package.json
@@ -1,27 +1,35 @@
 {
-  "name": "Eat-Da-BurgerV1",
-  "version": "1.0.0",
-  "description": "Node, Express, Handlebars Restaurant App",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/d-taylor6403/Eat-Da-BurgerV1.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/d-taylor6403/Eat-Da-BurgerV1/issues"
-  },
-  "homepage": "https://github.com/d-taylor6403/Eat-Da-BurgerV1#readme",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-handlebars": "^4.0.0",
-    "mysql": "^2.18.1"
-  }
+	"name": "Eat-Da-BurgerV1",
+	"version": "1.0.0",
+	"description": "Node, Express, Handlebars Restaurant App",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/d-taylor6403/Eat-Da-BurgerV1.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/d-taylor6403/Eat-Da-BurgerV1/issues"
+	},
+	"homepage": "https://github.com/d-taylor6403/Eat-Da-BurgerV1#readme",
+	"dependencies": {
+		"body-parser": "^1.19.0",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"express-handlebars": "^4.0.0",
+		"mysql": "^2.18.1"
+	},
+	"devDependencies": {
+		"eslint": "^6.8.0",
+		"eslint-config-node": "^4.0.0",
+		"eslint-config-prettier": "^6.10.1",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^3.1.2",
+		"prettier": "^2.0.2"
+	}
 }
